Simplified instrumented tests + added dependancies in gradle + fixed some xml issues in item_meeting_list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.example.mareu'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.mareu"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -30,24 +30,30 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        animationsDisabled = true
+    }
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    // Unit test
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:5.7.0'
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.4.0'
 
+    // Instrumented test
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.6.2'
 
-
-
-
+    androidTestUtil 'androidx.test:orchestrator:1.4.2'
 }
